--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
     <div class="quiz-container">
         <h1>Quiz</h1>
-        <div id="quiz"></div>
+        <div id="questions"></div>
         <button id="submit">Submit</button>
         <div id="score"></div>
     </div>
