--- a/main.html
+++ b/main.html
@@ -3,141 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Application</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        .quiz-container {
-            max-width: 600px;
-            margin: auto;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-        }
-        .question {
-            margin-bottom: 20px;
-        }
-        .options label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        #submit-btn {
-            display: block;
-            margin: auto;
-            padding: 10px 20px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        #score-display {
-            text-align: center;
-            margin-top: 20px;
-            font-size: 1.2em;
-        }
-    </style>
+    <title>Quiz</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="quiz-container">
-        <div id="quiz"></div>
-        <button id="submit-btn">Submit</button>
-        <div id="score-display"></div>
+    <div id="quiz-container">
+        <h1>Quiz</h1>
+        <form id="quiz-form">
+            <!-- Questions will be dynamically inserted here -->
+        </form>
+        <button id="submit-btn" type="button">Submit</button>
+        <p id="score-display"></p>
     </div>
-
-    <script>
-        const questions = [
-            {
-                question: "What is the capital of France?",
-                options: ["Paris", "London", "Rome", "Berlin"],
-                answer: "Paris"
-            },
-            {
-                question: "What is the capital of Italy?",
-                options: ["Paris", "London", "Rome", "Berlin"],
-                answer: "Rome"
-            },
-            {
-                question: "What is the capital of Germany?",
-                options: ["Paris", "London", "Rome", "Berlin"],
-                answer: "Berlin"
-            },
-            {
-                question: "What is the capital of England?",
-                options: ["Paris", "London", "Rome", "Berlin"],
-                answer: "London"
-            },
-            {
-                question: "What is the capital of Spain?",
-                options: ["Madrid", "Paris", "Rome", "Berlin"],
-                answer: "Madrid"
-            }
-        ];
-
-        function renderQuiz() {
-            const quizContainer = document.getElementById('quiz');
-            quizContainer.innerHTML = '';
-            questions.forEach((q, index) => {
-                const questionDiv = document.createElement('div');
-                questionDiv.classList.add('question');
-                questionDiv.innerHTML = `
-                    <p>${q.question}</p>
-                    <div class="options">
-                        ${q.options.map(option => `
-                            <label>
-                                <input type="radio" name="question${index}" value="${option}" ${getSavedOption(index) === option ? 'checked' : ''}>
-                                ${option}
-                            </label>
-                        `).join('')}
-                    </div>
-                `;
-                quizContainer.appendChild(questionDiv);
-            });
-        }
-
-        function getSavedOption(questionIndex) {
-            const progress = JSON.parse(sessionStorage.getItem('progress')) || {};
-            return progress[`question${questionIndex}`] || '';
-        }
-
-        function saveProgress(questionIndex, selectedOption) {
-            const progress = JSON.parse(sessionStorage.getItem('progress')) || {};
-            progress[`question${questionIndex}`] = selectedOption;
-            sessionStorage.setItem('progress', JSON.stringify(progress));
-        }
-
-        function calculateScore() {
-            let score = 0;
-            questions.forEach((q, index) => {
-                const savedOption = getSavedOption(index);
-                if (savedOption === q.answer) {
-                    score++;
-                }
-            });
-            return score;
-        }
-
-        document.getElementById('quiz').addEventListener('change', (event) => {
-            const name = event.target.name;
-            const value = event.target.value;
-            const questionIndex = parseInt(name.replace('question', ''), 10);
-            saveProgress(questionIndex, value);
-        });
-
-        document.getElementById('submit-btn').addEventListener('click', () => {
-            const score = calculateScore();
-            localStorage.setItem('score', score);
-            document.getElementById('score-display').textContent = `Your score is ${score} out of 5.`;
-        });
-
-        window.onload = () => {
-            renderQuiz();
-            const savedScore = localStorage.getItem('score');
-            if (savedScore !== null) {
-                document.getElementById('score-display').textContent = `Your previous score was ${savedScore} out of 5.`;
-            }
-        };
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
