--- a/main.html
+++ b/main.html
@@ -3,18 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Quiz App</title>
+    
 </head>
 <body>
-    <div id="quiz-container">
-        <h1>Quiz</h1>
-        <form id="quiz-form">
-            <!-- Questions will be dynamically inserted here -->
-        </form>
-        <button id="submit-btn" type="button">Submit</button>
-        <p id="score-display"></p>
+    <div class="quiz-container">
+        <div id="questions"></div>
+        <button id="submit" class="submit-btn">Submit</button>
+        <div id="score" class="score"></div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
